# inkbytes-Messor

./: .gitignore  NewsScraper.py  README.md  Scrapper.py  __main__.py  pyproject.toml  requirements.txt
Scrapping/: NewsScraper.py  Scrapper.py
